# Changes

./: AUDIT.md  Cargo.toml  LICENSE  Makefile  README.md  spec.md
.github/workflows/: ci.yml  release.yml
specs/: hunk-comments.md
src/: app.rs  diff.rs  git.rs  highlight.rs  lib.rs  main.rs  runtime.rs  ui.rs  watcher.rs
src/app/: keys.rs  mod.rs  mouse.rs
src/viewport/: layout.rs  mod.rs  row.rs  state.rs
tests/: unit_tests.rs
