[package]
name = "changes"
version = "0.1.0"
edition = "2024"
description = "See what your AI agent is doing to your code — live git diff viewer"
license = "MIT"
repository = "https://github.com/Bradley-Butcher/Changes"
keywords = ["git", "diff", "tui", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = { version = "0.30", features = ["crossterm", "underline-color"] }
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
notify = "8"
notify-debouncer-mini = "0.7"
git2 = "0.20"
syntect = "5"
similar = "2"
arboard = "3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
